deploy: 77712102a686e1ebad71abf3bd0610af61ec0eb1

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -210,6 +210,7 @@
 <li><a href="scripts/engine/world.html">scripts.engine.world</a></li>
 <li><a href="scripts/engine/world_objects/combat_stats.html">scripts.engine.world_objects.combat_stats</a></li>
 <li><a href="scripts/engine/world_objects/game_map.html">scripts.engine.world_objects.game_map</a></li>
+<li><a href="scripts/engine/world_objects/lighting.html">scripts.engine.world_objects.lighting</a></li>
 <li><a href="scripts/engine/world_objects/tile.html">scripts.engine.world_objects.tile</a></li>
 <li><a href="scripts/nqp/actions/behaviours.html">scripts.nqp.actions.behaviours</a></li>
 <li><a href="scripts/nqp/command.html">scripts.nqp.command</a></li>
