--- a/_modules/scripts/engine/key.html
+++ b/_modules/scripts/engine/key.html
@@ -298,6 +298,8 @@
             <span class="k">return</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">REFRESH_DATA</span>
         <span class="k">elif</span> <span class="n">event</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">pygame</span><span class="o">.</span><span class="n">K_F5</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">DUNGEON_DEV_VIEW</span>
+        <span class="k">elif</span> <span class="n">event</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">pygame</span><span class="o">.</span><span class="n">K_F6</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">TOGGLE_UI</span>
 
         <span class="k">elif</span> <span class="n">event</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">pygame</span><span class="o">.</span><span class="n">K_F12</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">TEST</span></div>
