--- a/_modules/scripts/nqp/processors/intent.html
+++ b/_modules/scripts/nqp/processors/intent.html
@@ -209,8 +209,10 @@
 <span class="kn">from</span> <span class="nn">scripts.engine.systems</span> <span class="kn">import</span> <span class="n">behaviour</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.ui.manager</span> <span class="kn">import</span> <span class="n">ui</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.tile</span> <span class="kn">import</span> <span class="n">Tile</span>
+<span class="kn">from</span> <span class="nn">scripts.nqp</span> <span class="kn">import</span> <span class="n">command</span>
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;process_intent&quot;</span><span class="p">]</span>
+
 
 
 <div class="viewcode-block" id="process_intent"><a class="viewcode-back" href="../../../../scripts.nqp.processors.html#scripts.nqp.processors.intent.process_intent">[docs]</a><span class="k">def</span> <span class="nf">process_intent</span><span class="p">(</span><span class="n">intent</span><span class="p">:</span> <span class="n">InputIntentType</span><span class="p">,</span> <span class="n">game_state</span><span class="p">:</span> <span class="n">GameStateType</span><span class="p">):</span>
@@ -233,6 +235,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1">## Activate Debug</span>
     <span class="k">if</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">DEBUG_TOGGLE</span><span class="p">:</span>
+        <span class="c1"># F1</span>
         <span class="k">if</span> <span class="n">debug</span><span class="o">.</span><span class="n">is_fps_visible</span><span class="p">():</span>
             <span class="n">debug</span><span class="o">.</span><span class="n">set_fps_visibility</span><span class="p">(</span><span class="kc">False</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
@@ -246,6 +249,7 @@
     <span class="c1">## Activate data editor</span>
     <span class="c1"># TODO - have this trigger dev console and move skill editor to a command in the console.</span>
     <span class="k">elif</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">DUNGEON_DEV_VIEW</span><span class="p">:</span>
+        <span class="c1"># key= F5</span>
         <span class="k">if</span> <span class="n">ui</span><span class="o">.</span><span class="n">element_is_visible</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">DUNGEN_VIEWER</span><span class="p">):</span>
             <span class="n">ui</span><span class="o">.</span><span class="n">set_element_visibility</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">DUNGEN_VIEWER</span><span class="p">,</span> <span class="kc">False</span><span class="p">)</span>
             <span class="n">state</span><span class="o">.</span><span class="n">set_new</span><span class="p">(</span><span class="n">state</span><span class="o">.</span><span class="n">get_previous</span><span class="p">())</span>
@@ -265,8 +269,16 @@
     <span class="k">elif</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">BURST_PROFILE</span><span class="p">:</span>
         <span class="n">debug</span><span class="o">.</span><span class="n">enable_profiling</span><span class="p">(</span><span class="mi">120</span><span class="p">)</span>
 
+    <span class="k">elif</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">TOGGLE_UI</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">ui</span><span class="o">.</span><span class="n">element_is_visible</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">MESSAGE_LOG</span><span class="p">):</span>
+            <span class="n">ui</span><span class="o">.</span><span class="n">set_element_visibility</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">MESSAGE_LOG</span><span class="p">,</span> <span class="kc">False</span><span class="p">)</span>
+            <span class="n">ui</span><span class="o">.</span><span class="n">set_element_visibility</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">SKILL_BAR</span><span class="p">,</span> <span class="kc">False</span><span class="p">)</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">ui</span><span class="o">.</span><span class="n">set_element_visibility</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">MESSAGE_LOG</span><span class="p">,</span> <span class="kc">True</span><span class="p">)</span>
+            <span class="n">ui</span><span class="o">.</span><span class="n">set_element_visibility</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">SKILL_BAR</span><span class="p">,</span> <span class="kc">True</span><span class="p">)</span>
+
     <span class="k">elif</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">TEST</span><span class="p">:</span>
-        <span class="c1"># add whatever we want to test here</span>
+        <span class="c1"># F12</span>
         <span class="n">breakpoint</span><span class="p">()</span>
 
 
@@ -321,6 +333,9 @@
         <span class="c1"># show</span>
         <span class="n">state</span><span class="o">.</span><span class="n">set_new</span><span class="p">(</span><span class="n">GameState</span><span class="o">.</span><span class="n">MENU</span><span class="p">)</span>
         <span class="n">ui</span><span class="o">.</span><span class="n">set_element_visibility</span><span class="p">(</span><span class="n">UIElement</span><span class="o">.</span><span class="n">ACTOR_INFO</span><span class="p">,</span> <span class="kc">True</span><span class="p">)</span>
+
+    <span class="k">elif</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">EXIT</span><span class="p">:</span>
+        <span class="n">command</span><span class="o">.</span><span class="n">exit_game</span><span class="p">()</span>
 
 
 <span class="k">def</span> <span class="nf">_process_targeting_mode_intents</span><span class="p">(</span><span class="n">intent</span><span class="p">):</span>
