--- a/_modules/scripts/engine/systems/vision.html
+++ b/_modules/scripts/engine/systems/vision.html
@@ -190,7 +190,7 @@
 <span class="kn">import</span> <span class="nn">tcod</span>
 
 <span class="kn">from</span> <span class="nn">scripts.engine</span> <span class="kn">import</span> <span class="n">world</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.component</span> <span class="kn">import</span> <span class="n">FOV</span><span class="p">,</span> <span class="n">LightSource</span><span class="p">,</span> <span class="n">Position</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.component</span> <span class="kn">import</span> <span class="n">FOV</span><span class="p">,</span> <span class="n">Aesthetic</span><span class="p">,</span> <span class="n">LightSource</span><span class="p">,</span> <span class="n">Position</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">queries</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.constants</span> <span class="kn">import</span> <span class="n">FOV_ALGORITHM</span><span class="p">,</span> <span class="n">FOV_LIGHT_WALLS</span>
 
@@ -202,7 +202,7 @@
 
 <div class="viewcode-block" id="process_light_map"><a class="viewcode-back" href="../../../../scripts.engine.systems.html#scripts.engine.systems.vision.process_light_map">[docs]</a><span class="k">def</span> <span class="nf">process_light_map</span><span class="p">():</span>
     <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Update light map using light sources of all entities</span>
+<span class="sd">    Update light map and light box  using light sources of all entities</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># get game map details</span>
     <span class="n">game_map</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_game_map</span><span class="p">()</span>
@@ -217,11 +217,15 @@
     <span class="k">for</span> <span class="n">entity</span><span class="p">,</span> <span class="p">(</span><span class="n">is_active</span><span class="p">,</span> <span class="n">light_source</span><span class="p">,</span> <span class="n">pos</span><span class="p">,)</span> <span class="ow">in</span> <span class="n">queries</span><span class="o">.</span><span class="n">active_and_light_source_and_position</span><span class="p">:</span>
         <span class="n">light_source</span><span class="p">:</span> <span class="n">LightSource</span>
         <span class="n">pos</span><span class="p">:</span> <span class="n">Position</span>
+        <span class="n">aesthetic</span><span class="p">:</span> <span class="n">Aesthetic</span>
         <span class="n">radius</span> <span class="o">=</span> <span class="n">light_source</span><span class="o">.</span><span class="n">radius</span>
 
-        <span class="c1"># create fov for light source</span>
+        <span class="c1"># create fov for light source and add to light map</span>
         <span class="n">fov</span> <span class="o">=</span> <span class="n">tcod</span><span class="o">.</span><span class="n">map</span><span class="o">.</span><span class="n">compute_fov</span><span class="p">(</span><span class="n">block_sight_map</span><span class="p">,</span> <span class="p">(</span><span class="n">pos</span><span class="o">.</span><span class="n">x</span><span class="p">,</span> <span class="n">pos</span><span class="o">.</span><span class="n">y</span><span class="p">),</span> <span class="n">radius</span><span class="p">,</span> <span class="n">FOV_LIGHT_WALLS</span><span class="p">,</span> <span class="n">FOV_ALGORITHM</span><span class="p">)</span>
-        <span class="n">light_map</span> <span class="o">|=</span> <span class="n">fov</span></div>
+        <span class="n">light_map</span> <span class="o">|=</span> <span class="n">fov</span>
+
+    <span class="c1"># assign back post updates</span>
+    <span class="n">game_map</span><span class="o">.</span><span class="n">light_map</span> <span class="o">=</span> <span class="n">light_map</span></div>
 
 
 <div class="viewcode-block" id="process_fov"><a class="viewcode-back" href="../../../../scripts.engine.systems.html#scripts.engine.systems.vision.process_fov">[docs]</a><span class="k">def</span> <span class="nf">process_fov</span><span class="p">():</span>
