--- a/_modules/scripts/engine/world.html
+++ b/_modules/scripts/engine/world.html
@@ -240,6 +240,7 @@
 <span class="kn">from</span> <span class="nn">scripts.engine.core.definitions</span> <span class="kn">import</span> <span class="n">ActorData</span><span class="p">,</span> <span class="n">ProjectileData</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.ui.manager</span> <span class="kn">import</span> <span class="n">ui</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.utility</span> <span class="kn">import</span> <span class="n">build_sprites_from_paths</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.world_objects</span> <span class="kn">import</span> <span class="n">lighting</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.combat_stats</span> <span class="kn">import</span> <span class="n">CombatStats</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.game_map</span> <span class="kn">import</span> <span class="n">GameMap</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.tile</span> <span class="kn">import</span> <span class="n">Tile</span>
@@ -323,8 +324,14 @@
     <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Blocking</span><span class="p">(</span><span class="kc">True</span><span class="p">,</span> <span class="n">library</span><span class="o">.</span><span class="n">GAME_CONFIG</span><span class="o">.</span><span class="n">default_values</span><span class="o">.</span><span class="n">entity_blocks_sight</span><span class="p">))</span>
     <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Traits</span><span class="p">(</span><span class="n">actor_data</span><span class="o">.</span><span class="n">trait_names</span><span class="p">))</span>
     <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">FOV</span><span class="p">())</span>
-    <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">LightSource</span><span class="p">(</span><span class="mi">2</span><span class="p">))</span>
     <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Tracked</span><span class="p">(</span><span class="n">chronicle</span><span class="o">.</span><span class="n">get_time</span><span class="p">()))</span>
+
+    <span class="c1"># set up light</span>
+    <span class="n">radius</span> <span class="o">=</span> <span class="mi">2</span>  <span class="c1"># TODO - pull radius and colour from external data</span>
+    <span class="n">colour</span> <span class="o">=</span> <span class="p">(</span><span class="mi">255</span><span class="p">,</span> <span class="mi">255</span><span class="p">,</span> <span class="mi">255</span><span class="p">)</span>
+    <span class="n">alpha</span> <span class="o">=</span> <span class="mi">200</span>
+    <span class="n">light_id</span> <span class="o">=</span> <span class="n">create_light</span><span class="p">(</span><span class="n">spawn_pos</span><span class="p">,</span> <span class="n">radius</span><span class="p">,</span> <span class="n">colour</span><span class="p">,</span> <span class="n">alpha</span><span class="p">)</span>
+    <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">LightSource</span><span class="p">(</span><span class="n">light_id</span><span class="p">,</span> <span class="n">radius</span><span class="p">))</span>
 
     <span class="c1"># get info from traits</span>
     <span class="n">traits_paths</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># for aesthetic</span>
@@ -410,6 +417,13 @@
     <span class="n">projectile</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Afflictions</span><span class="p">())</span>
     <span class="n">projectile</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">IsActive</span><span class="p">())</span>
 
+    <span class="c1"># set up light</span>
+    <span class="n">radius</span> <span class="o">=</span> <span class="mi">1</span>  <span class="c1"># TODO - pull radius and colour from external data</span>
+    <span class="n">colour</span> <span class="o">=</span> <span class="p">(</span><span class="mi">68</span><span class="p">,</span> <span class="mi">174</span><span class="p">,</span> <span class="mi">235</span><span class="p">)</span>
+    <span class="n">alpha</span> <span class="o">=</span> <span class="mi">240</span>
+    <span class="n">light_id</span> <span class="o">=</span> <span class="n">create_light</span><span class="p">((</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">),</span> <span class="n">radius</span><span class="p">,</span> <span class="n">colour</span><span class="p">,</span> <span class="n">alpha</span><span class="p">)</span>
+    <span class="n">projectile</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">LightSource</span><span class="p">(</span><span class="n">light_id</span><span class="p">,</span> <span class="n">radius</span><span class="p">))</span>
+
     <span class="n">entity</span> <span class="o">=</span> <span class="n">create_entity</span><span class="p">(</span><span class="n">projectile</span><span class="p">)</span>
 
     <span class="n">behaviour</span> <span class="o">=</span> <span class="n">action</span><span class="o">.</span><span class="n">behaviour_registry</span><span class="p">[</span><span class="s2">&quot;Projectile&quot;</span><span class="p">]</span>
@@ -439,6 +453,22 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">stats</span> <span class="o">=</span> <span class="n">CombatStats</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">stats</span></div>
+
+
+<div class="viewcode-block" id="create_light"><a class="viewcode-back" href="../../../scripts.engine.html#scripts.engine.world.create_light">[docs]</a><span class="k">def</span> <span class="nf">create_light</span><span class="p">(</span><span class="n">pos</span><span class="p">:</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">],</span> <span class="n">radius</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">colour</span><span class="p">:</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">],</span> <span class="n">alpha</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Create a Light and add it to the current GameMap&#39;s Lightbox. Pos is the world position - the light will handle</span>
+<span class="sd">    scaling to screen.</span>
+<span class="sd">    Returns the light_id of the Light.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="n">light_img</span> <span class="o">=</span> <span class="n">utility</span><span class="o">.</span><span class="n">get_image</span><span class="p">(</span><span class="s2">&quot;world/light_mask.png&quot;</span><span class="p">,</span> <span class="p">((</span><span class="n">radius</span> <span class="o">*</span> <span class="mi">2</span><span class="p">)</span> <span class="o">*</span> <span class="n">TILE_SIZE</span><span class="p">,</span> <span class="p">(</span><span class="n">radius</span> <span class="o">*</span> <span class="mi">2</span><span class="p">)</span> <span class="o">*</span> <span class="n">TILE_SIZE</span><span class="p">))</span>
+    <span class="n">light_box</span> <span class="o">=</span> <span class="n">get_game_map</span><span class="p">()</span><span class="o">.</span><span class="n">light_box</span>
+    <span class="n">light</span> <span class="o">=</span> <span class="n">lighting</span><span class="o">.</span><span class="n">Light</span><span class="p">([</span><span class="n">pos</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">*</span> <span class="n">TILE_SIZE</span><span class="p">,</span> <span class="n">pos</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">*</span> <span class="n">TILE_SIZE</span><span class="p">],</span> <span class="n">radius</span> <span class="o">*</span> <span class="n">TILE_SIZE</span><span class="p">,</span> <span class="n">light_img</span><span class="p">)</span>
+    <span class="n">light</span><span class="o">.</span><span class="n">set_alpha</span><span class="p">(</span><span class="n">alpha</span><span class="p">)</span>
+    <span class="n">light</span><span class="o">.</span><span class="n">set_colour</span><span class="p">(</span><span class="n">colour</span><span class="p">)</span>
+    <span class="n">light_id</span> <span class="o">=</span> <span class="n">light_box</span><span class="o">.</span><span class="n">add_light</span><span class="p">(</span><span class="n">light</span><span class="p">)</span>
+
+    <span class="k">return</span> <span class="n">light_id</span></div>
 
 
 <div class="viewcode-block" id="create_pathfinder"><a class="viewcode-back" href="../../../scripts.engine.html#scripts.engine.world.create_pathfinder">[docs]</a><span class="k">def</span> <span class="nf">create_pathfinder</span><span class="p">()</span> <span class="o">-&gt;</span> <span class="n">tcod</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">Pathfinder</span><span class="p">:</span>
@@ -1298,10 +1328,13 @@
 
 
 <div class="viewcode-block" id="kill_entity"><a class="viewcode-back" href="../../../scripts.engine.html#scripts.engine.world.kill_entity">[docs]</a><span class="k">def</span> <span class="nf">kill_entity</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Add entity to the deletion stack and removes them from the turn queue.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># if not player</span>
     <span class="k">if</span> <span class="n">entity</span> <span class="o">!=</span> <span class="n">get_player</span><span class="p">():</span>
         <span class="c1"># delete from world</span>
-        <span class="n">delete</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
+        <span class="n">delete_entity</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
 
         <span class="n">turn_queue</span> <span class="o">=</span> <span class="n">chronicle</span><span class="o">.</span><span class="n">get_turn_queue</span><span class="p">()</span>
 
@@ -1320,7 +1353,7 @@
         <span class="n">ui</span><span class="o">.</span><span class="n">log_message</span><span class="p">(</span><span class="s2">&quot;I should have died just then.&quot;</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="delete"><a class="viewcode-back" href="../../../scripts.engine.html#scripts.engine.world.delete">[docs]</a><span class="k">def</span> <span class="nf">delete</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">):</span>
+<div class="viewcode-block" id="delete_entity"><a class="viewcode-back" href="../../../scripts.engine.html#scripts.engine.world.delete_entity">[docs]</a><span class="k">def</span> <span class="nf">delete_entity</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Queues entity for removal from the world_objects. Happens at the next run of process.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
