--- a/_modules/scripts/engine/world_objects/lighting.html
+++ b/_modules/scripts/engine/world_objects/lighting.html
@@ -868,6 +868,41 @@
                 <span class="c1"># append to the walls list based on the last point found and the starting point</span>
                 <span class="n">final_walls</span><span class="o">.</span><span class="n">append</span><span class="p">([</span><span class="n">p1</span><span class="p">,</span> <span class="n">str_point</span><span class="p">(</span><span class="n">target_pos</span><span class="p">),</span> <span class="nb">int</span><span class="p">(</span><span class="n">point</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;;&quot;</span><span class="p">)[</span><span class="mi">2</span><span class="p">]),</span> <span class="nb">int</span><span class="p">(</span><span class="n">point</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;;&quot;</span><span class="p">)[</span><span class="mi">3</span><span class="p">])])</span>
 
+    <span class="c1"># correct overshot edges (must be done after grouping for proper results) and generate Wall objects</span>
+    <span class="k">for</span> <span class="n">wall</span> <span class="ow">in</span> <span class="n">final_walls</span><span class="p">:</span>
+        <span class="n">grid_pos_x</span> <span class="o">=</span> <span class="n">wall</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>
+        <span class="n">grid_pos_y</span> <span class="o">=</span> <span class="n">wall</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span>
+
+        <span class="c1"># get tile location of wall</span>
+        <span class="n">tile_x</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">grid_pos_x</span> <span class="o">//</span> <span class="n">tile_size</span><span class="p">)</span>
+        <span class="n">tile_y</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">grid_pos_y</span> <span class="o">//</span> <span class="n">tile_size</span><span class="p">)</span>
+
+        <span class="c1"># check for relevant bordering tiles to determine if it&#39;s okay to shorten the wall</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">wall</span><span class="p">[</span><span class="mi">2</span><span class="p">]:</span>
+            <span class="k">if</span> <span class="n">wall</span><span class="p">[</span><span class="mi">3</span><span class="p">]</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
+                <span class="k">if</span> <span class="p">[</span><span class="n">tile_x</span><span class="p">,</span> <span class="n">tile_y</span> <span class="o">+</span> <span class="mi">1</span><span class="p">]</span> <span class="ow">in</span> <span class="n">map_data</span><span class="p">:</span>
+                    <span class="n">wall</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="k">if</span> <span class="p">[</span><span class="n">tile_x</span> <span class="o">-</span> <span class="mi">1</span><span class="p">,</span> <span class="n">tile_y</span> <span class="o">+</span> <span class="mi">1</span><span class="p">]</span> <span class="ow">in</span> <span class="n">map_data</span><span class="p">:</span>
+                    <span class="n">wall</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+
+            <span class="c1"># move right-facing wall inward</span>
+            <span class="k">if</span> <span class="n">wall</span><span class="p">[</span><span class="mi">3</span><span class="p">]</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
+                <span class="n">wall</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+                <span class="n">wall</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">wall</span><span class="p">[</span><span class="mi">3</span><span class="p">]</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
+                <span class="k">if</span> <span class="p">[</span><span class="n">tile_x</span> <span class="o">+</span> <span class="mi">1</span><span class="p">,</span> <span class="n">tile_y</span><span class="p">]</span> <span class="ow">in</span> <span class="n">map_data</span><span class="p">:</span>
+                    <span class="n">wall</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="k">if</span> <span class="p">[</span><span class="n">tile_x</span> <span class="o">+</span> <span class="mi">1</span><span class="p">,</span> <span class="n">tile_y</span> <span class="o">-</span> <span class="mi">1</span><span class="p">]</span> <span class="ow">in</span> <span class="n">map_data</span><span class="p">:</span>
+                    <span class="n">wall</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+
+            <span class="c1"># move downward-facing wall inward</span>
+            <span class="k">if</span> <span class="n">wall</span><span class="p">[</span><span class="mi">3</span><span class="p">]</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
+                <span class="n">wall</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+                <span class="n">wall</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+
     <span class="c1"># generate Wall objects</span>
     <span class="n">_final_walls</span> <span class="o">=</span> <span class="p">[</span><span class="n">Wall</span><span class="p">(</span><span class="o">*</span><span class="n">wall</span><span class="p">)</span> <span class="k">for</span> <span class="n">wall</span> <span class="ow">in</span> <span class="n">final_walls</span><span class="p">]</span>
 
